--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,10 +16,10 @@
     <%= form.text_area :body %>
   </div>
 
-  <div>
-    <%= form.label :user_id, style: "display: block" %>
-    <%= form.number_field :user_id %>
-  </div>
+ <!-- <div>-->
+    <%#= form.label :user_id, style: "display: block" %>
+    <%#= form.number_field :user_id %>
+<!--  </div>-->
 
   <div>
     <%= form.submit %>
