--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,12 +1,14 @@
 <div id="<%= dom_id post %>">
+<%if current_user%>
+  <p>
+    <strong>User:</strong>
+    <%= post.user.name %>
+  </p>
+  <%end%>
   <p>
     <strong>Body:</strong>
     <%= post.body %>
   </p>
 
-  <p>
-    <strong>User:</strong>
-    <%= post.user_id %>
-  </p>
 
 </div>
