--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,9 @@
 <p style="color: green"><%= notice %></p>
-
+<%if current_user%>
+<%= link_to "Logout", destroy_user_session_path, method: :delete %>
+<%else%>
+<%= link_to "Login", new_user_session_path %>
+<%end%>
 <h1>Posts</h1>
 
 <div id="posts">
